--- a/dark.css
+++ b/dark.css
@@ -1,34 +1,24 @@
-
-@import './estilos.css';
-
-
-* {
-    --main-bg-color: #191919;
-    --contrast-bg-color: #252525;
-    --color-text-primary: #c1c0c1;
-    --font-family: monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
-    --text-color-resalt: yellow;
-    --dark-border: #393c3f;
-    --bg-table-tr: #2F1232;
-    --bg-table-l1: #40511E;
-    --bg-table-l2: #374122;
-    --border-radius: 4px;
-  }
-
+@import "estilos.css";
+:root {
+  --main-bg-color: #191919;
+  --contrast-bg-color: #252525;
+  --color-text-primary: #c1c0c1;
+  --font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  --text-color-resalt: yellow;
+  --dark-border: #393c3f;
+  --bg-table-tr: #2f1232;
+  --bg-table-l1: #40511e;
+  --bg-table-l2: #374122;
+  --border-radius: 4px;
+}
 div {
-    padding: 15%;
-    background-color: var(--main-bg-color);
-    color:var(--color-text-primary);
+  padding: 15%;
+  background-color: var(--main-bg-color);
+  color: var(--color-text-primary);
 }
-
  body {
-    font-family: var(--font-family);
-    font-size: 16px;
+  font-family: var(--font-family);
+  font-size: 16px;
 }
-
-/*  h1 {
-    color: var(--color-text-primary);
-} */
-
-
-
